--- a/.javascript.rst
+++ b/.javascript.rst
@@ -5,7 +5,7 @@
    À priori, cela devrait fonctionner sur *n'importe quel navigateur*
    assez récent, pour peu qu'il *supporte JavaScript* !
    Par ailleurs, la version **PDF** de cette page est inutile, ou presque...
-..   Vous pouvez signaler un bug d'un de ces scripts par `cette page <http://bitbucket.org/lbesson/web-sphinx-scripts/issues/>`_.
+..   Vous pouvez signaler un bug d'un de ces scripts par `cette page <https://bitbucket.org/lbesson/web-sphinx-scripts/issues/>`_.
 
 .. raw:: html
 
