--- a/A953.rst
+++ b/A953.rst
@@ -49,7 +49,7 @@ Essayez alors de suivre la procédure suivante :
 4. Selon la version installée, il peut être nécessaire de presser la touche ``@`` ou
    la touche ``loupe`` pour faire apparaître un menu à plusieurs choix.
 
-   .. image:: http://png-2.findicons.com/files/icons/573/must_have/48/search.png
+   .. image:: .search.png
       :scale: 70%
       :align: center
       :alt: Une bête loupe. Je voulais la mettre via FontAwesome, mais il n'y a pas d'icône de loupe !
