Adding the :grey:`...` role, because I never remember if it is gray or grey...

--- a/.special.rst
+++ b/.special.rst
@@ -2,6 +2,7 @@
 .. Has to be used with hacks.css (bitbucket.org/lbesson/web-sphinx/src/master/.static/hacks.css)
 .. role:: black
 .. role:: gray
+.. role:: grey
 .. role:: silver
 .. role:: white
 .. role:: maroon
