--- a/403.rst
+++ b/403.rst
@@ -58,7 +58,7 @@
    :target: index.html
 
 
-.. todo:: Traduire cette page en anglais aussi !
+.. Idée ? Traduire cette page en anglais aussi !
 
 
 .. (c) Lilian Besson, 2011-2021, https://bitbucket.org/lbesson/web-sphinx/
