--- a/.special.rst
+++ b/.special.rst
@@ -1,5 +1,7 @@
 .. Color profiles for Sphinx.
-.. Has to be used with hacks.css (bitbucket.org/lbesson/web-sphinx/src/master/.static/hacks.css)
+.. Has to be used with hacks.css
+.. (https://bitbucket.org/lbesson/web-sphinx/src/master/.static/hacks.css)
+
 .. role:: black
 .. role:: gray
 .. role:: grey
