Thanks to https://youtu.be/9PYlF-xU3bA?list=WL
- https://www.youtube.com/channel/UC0VVYtw21rg2cokUystu2Dw
- Pokemon but the trainers are Social Distancing

--- a/.blagues.rst
+++ b/.blagues.rst
@@ -124,3 +124,4 @@
 - Qu'est-ce qui est jaune, normé et complet ? Réponse : un espace de Bananach !
 - « Les vrais informaticiens confondent toujours Halloween et Noël car pour eux : Oct 31 = Dec 25. » -- Andrew Rutherford
 - Pourquoi les sumos aiment raconter même les pires blagues ? Parce qu'ils n'ont pas peur d'avoir un gros bide !
+- Comment appelle-t-on des squelettes qui parlent ? Des os-parleurs !
